@@ -2,7 +2,7 @@
 
 {{ template "tango-util.configuration.tpl" . }}
 
-{{ range $deviceserver := .Values.deviceServers }}
+{{ range $key, $deviceserver := .Values.deviceServers }}
 
 {{ range $instance := $deviceserver.instances }}
 
